--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>About Kevin</title
-    </head>
+      <title>About Kevin</title>
+     </head>
     <body>
       <h1>Sports</h1>
       <p>Kevin plays basketball rugby squash and tennis</p>
-      <h2>Nationality<h2>
+      <h2>Nationality</h2>
       <p>Kevin is Australian Irish and Japanese</p>
-      <h3>Favorite Foods<h3>
+      <h3>Favorite Foods</h3>
       <p>Kevin Likes Pizza, seafood and salad</p>
       <h4>Favorite Movies</h4>
       <p>His favorite movie is Social Networking</p>
