--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
      </head>
     <body>
       <h1>Sports</h1>
-      <p>Kevin plays basketball rugby squash and tennis</p>
+      <p>Kevin plays basketball, rugby, squash, and tennis</p>
       <h2>Nationality</h2>
-      <p>Kevin is Australian Irish and Japanese</p>
+      <p>Kevin is Australian, Irish, and Japanese</p>
       <h3>Favorite Foods</h3>
-      <p>Kevin Likes Pizza, seafood and salad</p>
+      <p>Kevin Likes Pizza, seafood, and salad</p>
       <h4>Favorite Movies</h4>
       <p>His favorite movie is Social Networking</p>
       <h5>Hobbies</h5>
